2001-07-10  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_print): Print the gwdevunsup
	tag as well.

	* network.pl.in (xst_network_get_parse_table): Added
	gwdevunsup for those platforms that don't support this.

2001-07-10  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_get_attribute): Implement.

	* parse.pl.in (xst_parse_xml): Implement in full.

2001-07-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_print): gatewaydev support.
	(xml_parse_network): same.

	* network.pl.in (xst_network_get_parse_table): new gatewaydev
	feature required to avoid ambiguous situations. RedHat-only
	for the moment. SuSE doesn't need it (well, doesn't use it).
	(xst_network_get_replace_table): same.
	TODO: investigate what to do for Debian.

2001-07-09  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Implement.
	(x_update_kw_list): Implement, has it's own function now.
	(xml_parse_display_modes): Implement.

2001-07-06  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_lookup_address_collect):
	Improved reusability by taking out xst_process_list_check_ready.
	(xst_network_lookup_address): Put that call here.

	* share.pl.in (xst_share_get_smbclient_list_cmd): Get
	smbclient command to get a list of shares from a host.
	(xst_share_scan_smb_host_call): Function to be called
	from xst_process_fork.
	(xst_share_scan_smb_start): Spawn an smbclient for
	every host.
	(xst_share_scan_nfs_host_call): Analogue.
	(xst_share_scan_nfs_start): Same.
	(xst_share_scan_share_collect): Get strings from
	children and return hash with host => [ @dirs ].
	(xst_share_scan_network): Finished, not tested. Launches
	all processes in parallel, after the bcast ping, including
	name lookups. Returns hash with information.

2001-07-06  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_xml): Begin XML config parser.

2001-07-06  Arturo Espinosa Aldama  <arturo@ximian.com>
